@@ -24,14 +24,43 @@ AC_PROG_RANLIB
 # save compiler flags, autoconf will change them later
 glimmer_FCFLAGS=$FCFLAGS
 AC_PROG_FC
+AC_PROG_EGREP
 FCFLAGS=$glimmer_FCFLAGS
 AC_LANG_PUSH(Fortran)
 AC_FC_SRCEXT(f90)
-if test "$FC" == gfortran; then
-  FCFLAGS="$FCFLAGS -x f95-cpp-input"
-else
-  FCFLAGS="$FCFLAGS -fpp"
+# which Fortran compiler are we running?
+AC_MSG_CHECKING([which fortran compiler])
+f95v="no idea"
+f95string=`$FC -V 2>&1`
+f95_moduleinclude="-I"
+f95_preprocessor="-fpp"
+# testing for SUN f95 compiler
+fs=`echo $f95string |$EGREP "Sun"`
+if test "$fs" != "" ; then
+  f95v="SUN f95"
+  f95_moduleinclude="-M"
 fi
+# testing for NAG f95 compiler
+fs=`echo $f95string |$EGREP "NAGWare"`
+if test "$fs" != "" ; then
+  f95v="NAGWare f95"
+fi
+# testing for INTEL ifort compiler
+fs=`echo $f95string |$EGREP "Intel"`
+if test "$fs" != "" ; then
+  f95v="Intel ifort"
+fi
+# testing for gfortran
+f95string=`$FC -v 2>&1`
+fs=`echo $f95string |$EGREP "gcc"`
+if test "$fs" != "" ; then
+  f95v="gfortran"
+  f95_preprocessor="-x f95-cpp-input"
+fi
+
+AC_MSG_RESULT([$f95v])
+
+FCFLAGS="$FCFLAGS $f95_preprocessor"
 
 dnl Checking for python
 AM_PATH_PYTHON([2.3],,[AC_MSG_RESULT(need at least python 2.3)])
@@ -44,7 +73,8 @@ AC_ARG_ENABLE(doc, AS_HELP_STRING([--enable-doc],[Build documentation]),
  no)   AC_MSG_RESULT([no]);;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-doc) ;;
 esac],[AC_MSG_RESULT([no])])
-AC_CHECK_PROGS(LATEX,[latex]) 
+AC_CHECK_PROGS(LATEX,[latex])
+AC_CHECK_PROGS(BIBTEX,[bibtex])
 AC_CHECK_PROGS(DVIPS,[dvips]) 
 AC_CHECK_PROGS(DVIPDFT,[dvipdfm]) 
 AC_CHECK_PROGS(GNUPLOT,[gnuplot]) 
@@ -75,7 +105,7 @@ AM_CONDITIONAL(EXT_BLAS,test "$ac_cv_haveblas" == 1)
 AC_ARG_WITH(netcdf,AS_HELP_STRING([--with-netcdf],[location where netCDF is installed]),[ac_cv_netcdf_prefix=$withval])
 if test "$ac_cv_netcdf_prefix" != ""; then
   AC_MSG_RESULT(netCDF location: $ac_cv_netcdf_prefix)
-  FCFLAGS="$FCFLAGS -I$ac_cv_netcdf_prefix/include"
+  FCFLAGS="$FCFLAGS $f95_moduleinclude$ac_cv_netcdf_prefix/include"
   LDFLAGS="$LDFLAGS -L$ac_cv_netcdf_prefix/lib"
 fi
 AC_CHECK_LIB(netcdf,NF_INQ_LIBVERS)
@@ -88,7 +118,7 @@ AC_ARG_WITH(enmabal,AS_HELP_STRING([--with-enmabal],[location ENMABAL library]),
 if test "$ac_cv_enmabal_prefix" != ""; then
   LIBS="$LIBS -lsmb"
   AC_MSG_RESULT(enmabal location: $ac_cv_enmabal_prefix)
-  FCFLAGS="$FCFLAGS -I$ac_cv_enmabal_prefix -DUSE_ENMABAL"
+  FCFLAGS="$FCFLAGS $f95_moduleinclude$ac_cv_enmabal_prefix -DUSE_ENMABAL"
   LDFLAGS="$LDFLAGS -L$ac_cv_enmabal_prefix"
   AC_MSG_CHECKING([for f90 ENMABAL interface])
   AC_COMPILE_IFELSE([AC_LANG_PROGRAM([],[use smb_mecons])],AC_MSG_RESULT([yes]),AC_MSG_FAILURE([no]))
