@@ -1,4 +1,4 @@
-\date{18th April 2005}
+%\date{18th April 2005}
 
 \newcommand{\pd}{\partial}
 \renewcommand{\vec}{\boldsymbol}
@@ -16,5 +16,7 @@
 #2\footnote{\texttt{#1}}%
 }%
 \fi\endgroup%
+
+\bibliographystyle{plainnat}
 
 \input{common/version.tex}
