@@ -1,6 +1,7 @@
 \usepackage{fancyhdr}
 \usepackage{babel}
 \usepackage{a4}
+\usepackage[round]{natbib}
 \usepackage{epsfig}
 \usepackage{supertabular}
 \usepackage{amsfonts}
