@@ -11,5 +11,5 @@
 \newpage
 
 \input{\dir/num.tex}
-
+\bibliography{glimmer}
 \end{document}
