@@ -1,3 +1,6 @@
+2005-07-01 Magnus Hagdorn
+ * merged in HEAD
+
 2005-06-24 Magnus Hagdorn
  * glide.f90: enable basal shear stress calculations
  * glide_vars.def: change unit of basal shear stress to kilopascal
@@ -98,6 +101,10 @@
 
 2005-05-18 Ian Rutt
  * Bug-fix changes to couple to Energy-balance mass-balance model
+ * Added instantaneous outputting of mass-balance coupling fields,
+   enables checking of output from mass-balance schemes
+ * Fixed problem with precision change in output from Energy balance
+   mass-balance scheme
 
 2005-05-17 Magnus Hagdorn
  * glide_types.f90: added variable basal heat flux
